--- a/Basico/.classpath
+++ b/Basico/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/igomez/Downloads/all-themes-1.0.10.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
